[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asv_samples"
version = "0.1.0"
description = "A set of asv samples"
authors = [
    {name = "Rohit Goswami", email = "rgoswami@ieee.org"},
]
license = {file = "LICENSE"}
readme = "readme.org"

[project.urls]
repository = "https://github.com/HaoZeke/asv_samples"

[tool.setuptools]
package-dir = {"" = "asv_samples"}
